Manejo de errores

--- a/5_Modulos_y_Bibliotecas.ipynb
+++ b/5_Modulos_y_Bibliotecas.ipynb
@@ -44,6 +44,33 @@
     "phpinfo();\n",
     "?>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ¿Como usar las bibliotecas en PHP?\n",
+    "\n",
+    "Las bibliotecas en PHP se pueden incluir en tus proyectos utilizando la sentencia include o require. La diferencia principal es que require produce un error fatal si el archivo no se encuentra, mientras que include solo muestra una advertencia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Incluir la biblioteca \"mi_biblioteca.php\"\n",
+    "require 'mi_biblioteca.php';\n",
+    "\n",
+    "// Utilizar las funciones y clases de la biblioteca\n",
+    "mi_funcion();\n",
+    "$objeto = new MiClase();"
+   ]
   }
  ],
  "metadata": {
