Entrada de Datos

--- a/7_Entrada_y_Salida_de_datos.ipynb
+++ b/7_Entrada_y_Salida_de_datos.ipynb
@@ -57,7 +57,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Entrada de datos\n",
+    "\n",
+    "PHP ofrece varias formas de obtener datos del usuario:\n",
+    "\n",
+    "- Formularios HTML: Los formularios HTML permiten al usuario ingresar datos que se envían al servidor mediante el método GET o POST.\n",
+    "\n",
+    "Para acceder a los datos enviados por el formulario, se utilizan las variables $_GET (para el método GET) o $_POST (para el método POST).\n",
+    "\n",
+    "- Línea de comandos: Si ejecutas PHP desde la línea de comandos, puedes obtener datos del usuario utilizando la función fgets()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Formularios HTML\n",
+    "\n",
+    "<form action=\"procesar_datos.php\" method=\"post\">\n",
+    "  Nombre: <input type=\"text\" name=\"nombre\"><br>\n",
+    "  <input type=\"submit\" value=\"Enviar\">\n",
+    "</form>\n",
+    "\n",
+    "$nombre = $_POST[\"nombre\"];\n",
+    "echo \"Hola, \" . $nombre;\n",
+    "\n",
+    "//Linea de comandos\n",
+    "\n",
+    "$nombre = fgets(STDIN);\n",
+    "echo \"Hola, \" . $nombre;"
+   ]
   }
  ],
  "metadata": {
