Lectura y escritura de archivos

--- a/7_Entrada_y_Salida_de_datos.ipynb
+++ b/7_Entrada_y_Salida_de_datos.ipynb
@@ -94,6 +94,44 @@
     "$nombre = fgets(STDIN);\n",
     "echo \"Hola, \" . $nombre;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lectura y escritura de archivos\n",
+    "\n",
+    "PHP te permite leer y escribir datos en archivos. Para abrir un archivo, se utiliza la función fopen(). Para leer datos, se utilizan funciones como fread() o fgets(). Para escribir datos, se utilizan funciones como fwrite() o fputs()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Abrir un archivo para lectura\n",
+    "$archivo = fopen(\"datos.txt\", \"r\");\n",
+    "\n",
+    "// Leer una línea del archivo\n",
+    "$linea = fgets($archivo);\n",
+    "\n",
+    "// Cerrar el archivo\n",
+    "fclose($archivo);\n",
+    "\n",
+    "// Abrir un archivo para escritura\n",
+    "$archivo = fopen(\"resultados.txt\", \"w\");\n",
+    "\n",
+    "// Escribir datos en el archivo\n",
+    "fwrite($archivo, \"El resultado es: \" . $resultado);\n",
+    "\n",
+    "// Cerrar el archivo\n",
+    "fclose($archivo);"
+   ]
   }
  ],
  "metadata": {
