Mejora en el formato

--- a/7_Entrada_y_Salida_de_datos.ipynb
+++ b/7_Entrada_y_Salida_de_datos.ipynb
@@ -12,13 +12,13 @@
     "\n",
     "PHP ofrece varias formas de mostrar datos en la pantalla:\n",
     "\n",
-    "- echo: Imprime una o más cadenas. Es la forma más común y rápida de mostrar datos.\n",
+    "- **echo:** Imprime una o más cadenas. Es la forma más común y rápida de mostrar datos.\n",
     "\n",
-    "- print: Imprime una cadena. Es similar a echo, pero solo puede imprimir una cadena a la vez.\n",
+    "- **print:** Imprime una cadena. Es similar a echo, pero solo puede imprimir una cadena a la vez.\n",
     "\n",
-    "- var_dump(): Muestra información detallada sobre una variable, incluyendo su tipo y valor. Es útil para depurar código.\n",
+    "- **var_dump():** Muestra información detallada sobre una variable, incluyendo su tipo y valor. Es útil para depurar código.\n",
     "\n",
-    "- printf(): Imprime una cadena formateada. Permite especificar el formato de los datos que se van a mostrar."
+    "- **printf():** Imprime una cadena formateada. Permite especificar el formato de los datos que se van a mostrar."
    ]
   },
   {
@@ -62,11 +62,11 @@
     "\n",
     "PHP ofrece varias formas de obtener datos del usuario:\n",
     "\n",
-    "- Formularios HTML: Los formularios HTML permiten al usuario ingresar datos que se envían al servidor mediante el método GET o POST.\n",
+    "- **Formularios HTML:** Los formularios HTML permiten al usuario ingresar datos que se envían al servidor mediante el método GET o POST.\n",
     "\n",
     "Para acceder a los datos enviados por el formulario, se utilizan las variables $_GET (para el método GET) o $_POST (para el método POST).\n",
     "\n",
-    "- Línea de comandos: Si ejecutas PHP desde la línea de comandos, puedes obtener datos del usuario utilizando la función fgets()."
+    "- **Línea de comandos:** Si ejecutas PHP desde la línea de comandos, puedes obtener datos del usuario utilizando la función fgets()."
    ]
   },
   {
@@ -101,7 +101,7 @@
    "source": [
     "## Lectura y escritura de archivos\n",
     "\n",
-    "PHP te permite leer y escribir datos en archivos. Para abrir un archivo, se utiliza la función fopen(). Para leer datos, se utilizan funciones como fread() o fgets(). Para escribir datos, se utilizan funciones como fwrite() o fputs()."
+    "PHP te permite leer y escribir datos en archivos. Para abrir un archivo, se utiliza la función **fopen().** Para leer datos, se utilizan funciones como **fread()** o **fgets().** Para escribir datos, se utilizan funciones como **fwrite()** o **fputs().**"
    ]
   },
   {
